--- a/style.css
+++ b/style.css
@@ -1,34 +1,46 @@
 body{
-    background-color: black;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-}
-
-.container{
-    width: 100%;
-    color: antiquewhite;
     
-}
-
-.row{
-
-    width:max-content;
-    height:100%;
-    border: 5px solid aqua;
-    margin-bottom: 50px;
-}
-.card-img{
-    margin-top:20px ;
-    height: 150px;
-    width: 270px;
-    border: 2px solid black;
-}
-.card-body{
-    margin-top:20px ;
-    width: 200px;
+     background-color: black !important;
      
-}
-.btn{
-    margin-top: 30px;
-}
+ }
+ h1{
+    width: 100vw;
+    color: antiquewhite;
+
+ }
+ .container{
+    display: flex;
+     flex-direction: row !important;
+     flex-wrap: wrap;
+     justify-content: center;
+     align-items: flex-start;
+ }
+
+   
+ 
+ .card{
+     margin-top: 30px;
+     margin-left: 30px;
+     width: 300px;
+     height: 500px;
+     border: 5px solid gray!important;
+     background-color: black!important;
+ }
+ .card-body{
+     background-color: goldenrod!important;
+     
+ }
+ .card-img{
+     width: 250px;
+     height: 200px;
+     margin: auto;
+     border: 2px solid black !important;
+    
+ }
+ .card-header{
+    background-color: black!important;
+    color: chartreuse !important;
+    font-weight: bolder;
+    font-size:larger;
+    
+ }
